# ln_gamma_fit

./: .gitignore  README.md
app/: GEMINI.md  Makefile  README.md  pyproject.toml
app/ln_gamma_fit/: fit_ln_gamma.py  poc_fit_ln_gamma.py
infra/: Dockerfile  docker-compose.yml  entrypoint.sh  ln_gamma_fit  run-env
