[project]
name = "ln-gamma-fit"
version = "0.1.0"
description = "High-performance Lognormal-Gamma mixture fitting using JAX"
readme = "README.md"
authors = [
    { name = "Tom", email = "tom@example.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.0",
    "jaxlib>=0.10.0",
    "scipy>=1.17.1",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ln_gamma_fit"]
